<resources>
    <string name="app_name">List</string>
    <string name="add_new_shop_item">Add new shop item</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="save_item">Save item</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_count">Invalid count</string>
    <string name="invalid_desc">Invalid description</string>
    <string name="close_bottom_sheet">Close bottom sheet</string>
</resources>