<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/save_item"
                android:textColor="@color/active"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/close_bottom_sheet"
                android:src="@drawable/ic_x" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="9dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/inactive"
                app:hintTextColor="@color/inactive">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:cursorVisible="false"
                    android:hint="@string/name"
                    android:inputType="textShortMessage"
                    android:textColor="@color/active" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:padding="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/inactive"
                app:hintTextColor="@color/inactive">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_item_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:cursorVisible="false"
                    android:hint="@string/count"
                    android:inputType="number"
                    android:textColor="@color/active" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:padding="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/inactive"
            app:hintTextColor="@color/inactive">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:cursorVisible="false"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColor="@color/active" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/active"
            android:text="@string/save"
            android:textColor="@color/black"
            app:cornerRadius="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>